--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>blackhorse</title>
   </head>
   <body>
+    <script src="https://cdn.bootcss.com/echarts/4.3.0-rc.1/echarts.min.js"></script>
     <noscript>
       <strong>We're sorry but blackhorse doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
